# stock-analyst

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: arquitetura_e_fluxo.md
src/: __init__.py  app.py  main.py  personal_tools.py  sub_agents.py
